--- a/Desktop/Print-it-JS-main/index.html
+++ b/Desktop/Print-it-JS-main/index.html
@@ -21,25 +21,18 @@
     <a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
   </header>
   <main>
-
-    <div id="banner">
-
+    <div id="banner" class="">
       <img class="banner-img" id="placeimagevisible" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-
-        <img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="arrow left">
-        <img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="arrow right">
-    
+      <img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="arrow left">
+      <img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="arrow right">
       <p>Impressions tous formats <span>en boutique et en ligne</span></p>
-
       <div class="dots">
         <div class="dot dot_selected"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
       </div>
-
     </div>
-
     <section id="about-us" class="container">
       <div>
         <h2>Qui sommes-nous ?</h2>
